--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <button>Selengkapnya</button>
             </div>
             <div class="box">
-              <img src="pantai bira.png" alt="" />
+              <img src="pantai bira.jpg" alt="" />
             </div>
           </div>
         </div>
